# orca

./: .env.sample  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: unit-tests.yaml
src/: main.py
src/cloud/: __init__.py  views.py
src/core/: cloud_service.py  middlewares.py  models.py  test.py
src/monitoring/: __init__.py  views.py
src/tests/: conftest.py  test_api.py  test_cloud_service.py
src/tests/fixtures/: cloud.json
